Fix stats layout issue in Safari

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -1673,9 +1673,14 @@ span.number, span.suit {
 		overflow-x: hidden;
 	}
 
-	#stats, #img, #daystate, #weather, #location, #spray1, #spray2, #spray3, #spray4, #spray5
+	#img, #daystate, #weather, #location, #spray1, #spray2, #spray3, #spray4, #spray5
 	{
 		position: absolute;
+	}
+
+	#stats {
+		position: relative;
+		top: 0px;
 	}
 }}
 
@@ -1685,9 +1690,14 @@ span.number, span.suit {
 		overflow-x: hidden;
 	}
 
-	#stats, #img, #daystate, #weather, #location, #spray1, #spray2, #spray3, #spray4, #spray5
+	#img, #daystate, #weather, #location, #spray1, #spray2, #spray3, #spray4, #spray5
 	{
 		position: absolute;
+	}
+
+	#stats {
+		position: relative;
+		top: 0px;
 	}
 }}
 
